@@ -29,7 +29,7 @@ require 'ffi' # sudo gem install ffi
 module Rufus
 module Tokyo
 
-  VERSION = '0.1.11'
+  VERSION = '0.1.12'
 
   #
   # A common error class
