@@ -43,11 +43,18 @@ module Rufus::Tokyo
       /usr/local/lib/libtokyotyrant.so
     })
 
-    path = paths.find { |path| File.exist?(path) }
+    begin
 
-    raise "Did not find Tokyo Tyrant libraries on your system" unless path
+      ffi_lib(*paths)
 
-    ffi_lib(path)
+    rescue LoadError => le
+      raise(
+        "didn't find Tokyo Tyrant libs on your system. " +
+        "Please install Tokyo Tyrant (http://tokyocabinet.sf.net) " +
+        "(see also http://openwferu.rubyforge.org/tokyo.html)"
+      )
+    end
+
 
     class << self
       alias :attfunc :attach_function
